fix too large font-size for small screens

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     overflow-x: hidden;
     background: #ebf6f5;
     font-family: sans-serif;
+    min-height: 100vh;
 }
 
 button {
@@ -109,6 +110,7 @@ header #points {
 /* MAIN */
 main {
     min-height: 100vh;
+    height: auto;
     border: 2px solid black;
     background: #fff;
     padding: 12px 14px 0 14px;
@@ -187,4 +189,25 @@ main {
 
 .playground .mistakes-counter input {
     width: 100%;
+}
+
+
+
+/* SMALL SCREENS (font-size - 4px) */
+@media only screen and (max-width: 768px) {
+    button, input {
+        font-size: 16.8px;
+    }
+    .black-btn {
+        font-size: 14px;
+    }
+    .small-description {
+        font-size: 12px;
+    }
+    .playground .countdown {
+        font-size: 36px;
+    }
+    .playground .users-sentence {
+        font-size: 12px;
+    }
 }
